--- a/MvvmExample/packages.config
+++ b/MvvmExample/packages.config
@@ -1,4 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="FontAwesome5" version="2.1.0" targetFramework="net45" />
+  <package id="OxyPlot.Core" version="2.0.0" targetFramework="net45" />
+  <package id="OxyPlot.Wpf" version="2.0.0" targetFramework="net45" />
 </packages>
